associate faq to places and events
